added comments to code

--- a/templates/intern.html
+++ b/templates/intern.html
@@ -5,6 +5,7 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
+            <!-- based code enables us to dynamically create html based upon role selection -->
             <li class="list-group-item">ID: {{ id }}</li>
             <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
             <li class="list-group-item">School: {{ school }}</li>
