--- a/templates/intern.html
+++ b/templates/intern.html
@@ -1,4 +1,6 @@
-<div class="card employee-card">
+<link rel = "stylesheet" href = "../assets/style.css">
+
+<div class="intern card employee-card">
     <div class="card-header">
         <h2 class="card-title">{{ name }}</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>{{ role }}</h3>
